cosinnus/static/less/rtl.less
html[dir="rtl"] {

    .cosinnus-form {
        button[type=submit] {
            float: left;
            margin: 0;
        }
    }

    .cosinnus-field-input {
        text-align: right;

        input::placeholder {
            text-align: right;
        }
    }

    .conference {
        margin-right: 14vw;
        margin-left: 0;
    }

    .MuiDrawer-paperAnchorDockedLeft {
        left: auto;
    }

    .MuiListItem-root {
        text-align: right;
    }

    .jss57 {
        float: left;
    }

    .media-list {
        padding-inline-start: 0;
    }

    .btn.w100 .media-body {
        text-align: right;
    }

    .media {
        .pull-left {
            float: right !important;
        }

        .pull-right {
            float: left !important;
        }
    }

    .map-controls-search {
        position: unset;
    }

    .map-controls .map-controls-search .icon-search {
        right: unset;
        left: 0;
    }

    .map-controls .map-controls-search .icon-filters {
        left: unset;
        right: 0;
    }

    .map-controls .map-controls-search .icon-box:before {
        right: unset;
        left: 54px;
    }

    .input-area > li {
        float: none;
    }

    .map-controls .hover-image-button .hover-image-icon-pos-abs {
        left: unset;
        right: 25%;
    }

    .content-box button.btn {
        float: left;
    }

    .tile-detail-open .tile-detail .tile-close-button {
        right: unset;
        left: 20px;
    }

    .app-root .tile-detail .single-tile-image {
        float: right;
        margin: 15px 0 15px 15px;
    }

    .tile-section .row .col-sm-6 {
        float: right;
    }

    .tile-section .row .col-sm-6 .card-image {
        float: right;
        margin: 3px 0 15px 10px;
    }

    .map-create-idea-button-frame {
        left: 10px;
        right: unset;
        bottom: 15px;
    }

    .pagination-controls {
        .fa-chevron-right,
        .fa-chevron-left {
            transform: rotate(180deg);
        }
    }

    .translations-link {
        text-align: right;
        padding-right: 20px;
    }

    .modal {
        .close {
            float: left;
        }

        .modal-title {
            text-align: right;
        }
    }

    .v2-dashboard {
        text-align: right;

        .onoffswitch-text-label {
            padding-right: 5px;
        }
    }

    .v2-navbar {
        text-align: right;

        .text-right {
            text-align: left;
        }
    }
}

